# basicserial

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
src/basicserial/: __init__.py  json.py  toml.py  util.py  yaml.py
test/: __init__.py  common.py  test_json.py  test_toml.py  test_yaml.py
