[build-system]
requires = [
    'setuptools',
    'wheel',
]

[tool.tidypy]
exclude = [
    '.venv/.*',
    'test/.*',
    'build/.*',
    'dist/.*',
    '.pytest_cache/.*',
]
vulture = {use = false}

[tool.tidypy.pycodestyle]
disabled = [
    'W391',
    'E731',
]

[tool.tidypy.pydocstyle]
disabled = [
    'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D107',
    'D200', 'D202', 'D203', 'D205', 'D212',
    'D400', 'D401',
]

[tool.tidypy.pylint]
disabled = [
    'missing-docstring',
    'trailing-newlines',
    'duplicate-code',
]
[tool.tidypy.pylint.options]
min-public-methods = 0

[tool.tidypy.pyflakes]
disabled = [
    'UnusedImport',
    'ImportStarUsed',
]

[tool.tidypy.yamllint]
disabled = [
    'empty-lines',
    'document-start',
]

[tool.tidypy.bandit]
disabled = [
    'B506',
]

